[package]
name = "janni"
version = "0.1.0"
edition = "2021"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "chrono",
    "client",
#   "framework",
    "gateway",
    "http",
    "model",
#   "standard_framework",
    "utils",
    "rustls_backend"
]

[dependencies.tokio]
version = "1.23.0"
features = ["full"]